changed directory to project root

--- a/scripts/data_analysis.ipynb
+++ b/scripts/data_analysis.ipynb
@@ -2,229 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import os\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.dates as mdates\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/daniel/python_projects/Strom/scripts'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "os.getcwd()"
+    "workspace_dir = '../'\n",
+    "os.chdir(workspace_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Country</th>\n",
-       "      <th>ISO3 Code</th>\n",
-       "      <th>Datetime (UTC)</th>\n",
-       "      <th>Datetime (Local)</th>\n",
-       "      <th>Price (EUR/MWhe)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Spain</td>\n",
-       "      <td>ESP</td>\n",
-       "      <td>2015-01-01 00:00:00</td>\n",
-       "      <td>2015-01-01 01:00:00</td>\n",
-       "      <td>48.10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Spain</td>\n",
-       "      <td>ESP</td>\n",
-       "      <td>2015-01-01 01:00:00</td>\n",
-       "      <td>2015-01-01 02:00:00</td>\n",
-       "      <td>47.33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Spain</td>\n",
-       "      <td>ESP</td>\n",
-       "      <td>2015-01-01 02:00:00</td>\n",
-       "      <td>2015-01-01 03:00:00</td>\n",
-       "      <td>42.27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Spain</td>\n",
-       "      <td>ESP</td>\n",
-       "      <td>2015-01-01 03:00:00</td>\n",
-       "      <td>2015-01-01 04:00:00</td>\n",
-       "      <td>38.41</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Spain</td>\n",
-       "      <td>ESP</td>\n",
-       "      <td>2015-01-01 04:00:00</td>\n",
-       "      <td>2015-01-01 05:00:00</td>\n",
-       "      <td>35.72</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>87855</th>\n",
-       "      <td>Spain</td>\n",
-       "      <td>ESP</td>\n",
-       "      <td>2025-01-08 17:00:00</td>\n",
-       "      <td>2025-01-08 18:00:00</td>\n",
-       "      <td>122.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>87856</th>\n",
-       "      <td>Spain</td>\n",
-       "      <td>ESP</td>\n",
-       "      <td>2025-01-08 18:00:00</td>\n",
-       "      <td>2025-01-08 19:00:00</td>\n",
-       "      <td>131.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>87857</th>\n",
-       "      <td>Spain</td>\n",
-       "      <td>ESP</td>\n",
-       "      <td>2025-01-08 19:00:00</td>\n",
-       "      <td>2025-01-08 20:00:00</td>\n",
-       "      <td>124.81</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>87858</th>\n",
-       "      <td>Spain</td>\n",
-       "      <td>ESP</td>\n",
-       "      <td>2025-01-08 20:00:00</td>\n",
-       "      <td>2025-01-08 21:00:00</td>\n",
-       "      <td>112.66</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>87859</th>\n",
-       "      <td>Spain</td>\n",
-       "      <td>ESP</td>\n",
-       "      <td>2025-01-08 21:00:00</td>\n",
-       "      <td>2025-01-08 22:00:00</td>\n",
-       "      <td>111.90</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>87860 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Country ISO3 Code       Datetime (UTC)     Datetime (Local)  \\\n",
-       "0       Spain       ESP  2015-01-01 00:00:00  2015-01-01 01:00:00   \n",
-       "1       Spain       ESP  2015-01-01 01:00:00  2015-01-01 02:00:00   \n",
-       "2       Spain       ESP  2015-01-01 02:00:00  2015-01-01 03:00:00   \n",
-       "3       Spain       ESP  2015-01-01 03:00:00  2015-01-01 04:00:00   \n",
-       "4       Spain       ESP  2015-01-01 04:00:00  2015-01-01 05:00:00   \n",
-       "...       ...       ...                  ...                  ...   \n",
-       "87855   Spain       ESP  2025-01-08 17:00:00  2025-01-08 18:00:00   \n",
-       "87856   Spain       ESP  2025-01-08 18:00:00  2025-01-08 19:00:00   \n",
-       "87857   Spain       ESP  2025-01-08 19:00:00  2025-01-08 20:00:00   \n",
-       "87858   Spain       ESP  2025-01-08 20:00:00  2025-01-08 21:00:00   \n",
-       "87859   Spain       ESP  2025-01-08 21:00:00  2025-01-08 22:00:00   \n",
-       "\n",
-       "       Price (EUR/MWhe)  \n",
-       "0                 48.10  \n",
-       "1                 47.33  \n",
-       "2                 42.27  \n",
-       "3                 38.41  \n",
-       "4                 35.72  \n",
-       "...                 ...  \n",
-       "87855            122.00  \n",
-       "87856            131.00  \n",
-       "87857            124.81  \n",
-       "87858            112.66  \n",
-       "87859            111.90  \n",
-       "\n",
-       "[87860 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import csv file as a dataframe\n",
-    "df = pd.read_csv('../data/Spain.csv')\n",
-    "df"
+    "df = pd.read_csv('./data/Spain.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_37898/1979841826.py:5: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df['Datetime (Local)'] = pd.to_datetime(df['Datetime (Local)'])\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "<Axes: xlabel='Datetime (Local)'>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -253,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +82,7 @@
        "<Axes: xlabel='Datetime (Local)'>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -293,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
